wip - changing grid to flex

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Тех.задание курс Веб и DHTML</title>
+    <title>Тех. задание курс Веб и DHTML</title>
     <link rel="stylesheet" href="./index.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <input class="hidden trigger-pay" type="radio" name="action" id="pay" checked>
@@ -14,7 +15,7 @@
     <main class="page">
       <h1 class="page-name">Управление платежами</h1>
       <div class="box white shadow top-line">
-        <div class="client-info secondary">
+        <div class="client-info columns-2 secondary">
           <div class="column-1">
             <h2 class="company-name">ИП Иванов Иван Иванович</h2>
             <div class="contacts margin">
@@ -31,60 +32,172 @@
           </div>
           <img class="user-icon" src="img/user.svg" title="UserIcon" alt="UserIcon">
         </div>
-        <div class="actions secondary bottom-shadow">
-          <label class="action-name action-pay" for="pay"><h1>Заплатить</h1></label>
-          <label class="action-name action-request" for="request"><h1>Запросить платёж</h1></label>
+        <div class="menu secondary bottom-shadow">
+          <div class="actions">
+            <label class="action-name action-pay" for="pay"><h1>Заплатить</h1></label>
+            <label class="action-name action-request" for="request"><h1>Запросить платёж</h1></label>
+          </div>
+        </div>
+        <div class="action payment">
+          <input class="hidden trigger-payment-any" type="radio" name="payment" id="any" checked>
+          <input class="hidden trigger-payment-own" type="radio" name="payment" id="own">
+          <div class="actions actions-inline">
+            <label class="action-name payment-any menu-small" for="any"><h1>С карты любого банка</h1></label>
+            <label class="action-name payment-own menu-small" for="own"><h1>Из своего интернет-банка</h1></label>
+          </div>
+          <div class="any">
+            <form class="columns-2">
+              <div class="card shadow">
+                <input class="form-input input100" type="text" placeholder="Номер карты">
+                <input class="form-input em3" type="text" placeholder="ММ/ГГ">
+                <input class="form-input em3" type="text" placeholder="CVC">
+              </div>
+              <div class="card-fields">
+                <div class="margin">
+                  <label>
+                    <div class="em12">Сумма платежа</div>
+                    <input class="form-input em9" type="text">
+                  </label>
+                </div>
+                <div class="margin">
+                  <label>
+                    <div class="em12">Комментарий</div>
+                    <input class="form-input input100" type="text" placeholder="До 150 символов">
+                  </label>
+                </div>
+                <div class="margin">
+                  <label>
+                    <div class="em12">Электронная почта</div>
+                    <input class="form-input input100" type="text" placeholder="Для квитанций об уплате">
+                  </label>
+                </div>
+                <div class="margin">
+                  <input class="button accent-button" type="button" value="Заплатить">
+                </div>
+              </div>
+            </form>
+          </div>
+          <div class="own">
+            <p>Сформируйте платёжку и загрузите сё в свой банк для подписи</p>
+            <form class="form">
+              <div class="fields">
+                <div class="margin">
+                  <label>
+                    <span class="form-label em12">ИНН плательщика</span>
+                    <input class="form-input" type="text" placeholder="ИНН или название плательщика">
+                  </label>
+                </div>
+                <div class="margin">
+                  <label>
+                    <span class="form-label em12">БИК</span>
+                    <input class="form-input" type="text">
+                  </label>
+                </div>
+                <div class="margin">
+                  <label>
+                    <span class="form-label em12">Номер счёта</span>
+                    <input class="form-input" type="text">
+                  </label>
+                </div>
+                <div class="margin">
+                  <label>
+                    <span class="form-label em12">Назначение платежа</span>
+                    <input class="form-input" type="text">
+                  </label>
+                </div>
+                <div class="margin">
+                    <span class="form-label em12">НДС</span>
+                    <div class="switch">
+                      <input class="hidden nds18" type="radio" name="dns-own" id="nds18-own">
+                      <input class="hidden nds10" type="radio" name="dns-own" id="nds10-own">
+                      <input class="hidden nds0" type="radio" name="dns-own" id="nds0-own" checked>
+                      <label for="nds18-own" class="button white-button nds18-button">НДС 18%</label>
+                      <label for="nds10-own" class="button white-button nds10-button">НДС 10%</label>
+                      <label for="nds0-own" class="button white-button nds0-button">Без НДС</label>
+                    </div>
+                </div>
+                <div class="margin">
+                  <label>
+                    <span class="form-label em12">Сумма платежа</span>
+                    <input class="form-input em9" type="text">
+                  </label>
+                </div>
+              </div>
+              <div class="margin">
+                <input class="button accent-button" type="button" value="Получить файл для интернет-банка">
+                <input class="button white-button" type="button" value="Очистить форму">
+              </div>
+            </form>
+          </div>
         </div>
         <div class="action request">
           <p>Создайте платёжку, а ИП Иванов Иван Иванович подпишет её у себя в интернет-банке</p>
           <form class="form">
-            <div class="margin">
-              <label>
-                <span class="form-label">ИНН получателя</span>
-                <input class="form-input" type="text" placeholder="ИНН или название получателя">
-              </label>
+            <div class="fields">
+              <div class="margin">
+                <label>
+                  <span class="form-label em12">ИНН получателя</span>
+                  <input class="form-input" type="text" placeholder="ИНН или название получателя">
+                </label>
+              </div>
+              <div class="margin">
+                <label>
+                  <span class="form-label em12">БИК</span>
+                  <input class="form-input" type="text">
+                </label>
+              </div>
+              <div class="margin">
+                <label>
+                  <span class="form-label em12">Номер счёта</span>
+                  <input class="form-input" type="text">
+                </label>
+              </div>
+              <div class="margin">
+                <label>
+                  <span class="form-label em12">Назначение платежа</span>
+                  <input class="form-input" type="text">
+                </label>
+              </div>
+              <div class="margin">
+                  <span class="form-label em12">НДС</span>
+                  <div class="switch">
+                    <input class="hidden nds18" type="radio" name="dns" id="nds18">
+                    <input class="hidden nds10" type="radio" name="dns" id="nds10">
+                    <input class="hidden nds0" type="radio" name="dns" id="nds0" checked>
+                    <label for="nds18" class="button white-button nds18-button">НДС 18%</label>
+                    <label for="nds10" class="button white-button nds10-button">НДС 10%</label>
+                    <label for="nds0" class="button white-button nds0-button">Без НДС</label>
+                  </div>
+              </div>
+              <div class="margin">
+                <label>
+                  <span class="form-label em12">Сумма платежа</span>
+                  <input class="form-input em9" type="text">
+                </label>
+              </div>
+              <div class="margin">
+                <label>
+                  <span class="form-label em12">Номер телефона</span>
+                  <input class="form-input em9" type="tel" placeholder="+7 (000) 000-00-00">
+                </label>
+              </div>
+              <span class="capture">Оставляя номер телефона, вы соглашаетесь на </span>
+              <a class="capture" href="#">обработку персональных данных</a>
+              <div class="margin">
+                <label>
+                  <span class="form-label em12">Электронная почта</span>
+                  <input class="form-input" type="text" placeholder="Для уведомлений об уплате">
+                </label>
+              </div>
             </div>
             <div class="margin">
-              <label>
-                <span class="form-label">БИК</span>
-                <input class="form-input" type="text">
-              </label>
+              <input class="button accent-button" type="button" value="Запросить платёж">
+              <input class="button white-button" type="button" value="Очистить форму">
             </div>
-            <div class="margin">
-              <label>
-                <span class="form-label">Номер счёта</span>
-                <input class="form-input" type="text">
-              </label>
-            </div>
-            <div class="margin">
-              <label>
-                <span class="form-label">Назначение платежа</span>
-                <input class="form-input" type="text">
-              </label>
-            </div>
-            <div class="margin">
-              <label>
-                <span class="form-label">Сумма платежа</span>
-                <input class="form-input" type="text">
-              </label>
-            </div>
-            <div class="margin">
-              <label>
-                <span class="form-label">Номер телефона</span>
-                <input class="form-input" type="tel">
-              </label>
-            </div>
-            <a class="capture" href="#">
-              Оставляя номер телефона, вы соглашаетесь на обработку персональных данных
-            </a>
-            <div class="margin">
-              <label>
-                <span class="form-label">Электронная почта</span>
-                <input class="form-input" type="text">
-              </label>
-            </div>
-            <input class="button accent-button" type="button" value="Запросить платёж">
           </form>
+        </div>
+        <div class="about secondary top-shadow">
+          <h2>Информация о компании</h2>
         </div>
       </div>
     </main>
